<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.geogehigbie.developerhealthplusversion2.fragments.pre_exercsie_fragments.DayChooserFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/day_chooser_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/days"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/textColor"
           />

        <LinearLayout
            android:id="@+id/day_chooser_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/day_chooser_text"
            android:layout_margin="@dimen/title_margin"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/days_row1"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/monday"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/check_box_text_padding"
                    android:buttonTint="@color/textColor">
                </CheckBox>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/tuesday"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/check_box_text_padding"
                    android:buttonTint="@color/textColor">
                </CheckBox>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/wednesday"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/check_box_text_padding"
                    android:buttonTint="@color/textColor">
                </CheckBox>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/thursday"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/check_box_text_padding"
                    android:buttonTint="@color/textColor">
                </CheckBox>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/days_row2"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/friday"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/check_box_text_padding"
                    android:buttonTint="@color/textColor">
                </CheckBox>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/saturday"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/check_box_text_padding"
                    android:buttonTint="@color/textColor">
                </CheckBox>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/sunday"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/check_box_text_padding"
                    android:buttonTint="@color/textColor">
                </CheckBox>

        </LinearLayout>


        </LinearLayout>




    </RelativeLayout>

</FrameLayout>
