<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="layout.ExerciseChooserFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/exercise_intro"
            android:text="@string/description"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_margin="@dimen/title_margin"
            />


        <TextView
            android:id="@+id/choose_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_exercise"
            android:textColor="@color/textColor"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_margin="@dimen/text_margin"
            />

        <Button
            android:id="@+id/upper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upper_back"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:background="@drawable/button_rounded"
            android:padding="@dimen/title_margin"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/title_margin"/>



    </LinearLayout>


</FrameLayout>
