<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.geogehigbie.developerhealthplusversion2.activities.MainActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_layout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/app_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/title_margin"
                android:text="@string/description"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/disclaimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/title_margin"
                android:text="@string/disclaimer"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/textColor"/>

            <Button
                android:id="@+id/improve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/title_margin"
                android:background="@drawable/button_rounded"
                android:padding="@dimen/title_margin"
                android:text="@string/improve_health"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/textColor"
                android:textStyle="bold"/>

        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
