<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.geogehigbie.developerhealthplusversion2.fragments.post_exercise_fragments.ChangeTimePageFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/current_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/time_selection_choice"
            android:layout_alignParentTop="true"
            android:textColor="@color/textColor"
            android:textAppearance="?android:textAppearanceLarge"/>

        <LinearLayout
            android:id="@+id/selection_page_linear_layout"
            android:layout_below="@id/current_selection"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/half_text_margin">

            <TextView
                android:id="@+id/int_time_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_text_margin"
                android:text="30"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceLarge"/>

            <TextView
                android:id="@+id/minutes_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_text_margin"
                android:text="@string/minutes"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceLarge"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/centered_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal">


        <Button
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_rounded"
            android:padding="@dimen/title_margin"
            android:text="@string/yes"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/textColor"
            android:textStyle="bold"/>


            <Button
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/button_margin"
                android:background="@drawable/button_rounded"
                android:padding="@dimen/title_margin"
                android:text="@string/no"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/textColor"
                android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
